--- a/src/app/clients/balance-account-client/balance-account-client.component.html
+++ b/src/app/clients/balance-account-client/balance-account-client.component.html
@@ -26,12 +26,14 @@
     </div>
   </mat-card-content>
   <mat-card-content>
-    <table mat-table class="mat-elevation-z8"  multiTemplateDataRows (matSortChange)="sortData($event)" [dataSource]="accountsShow" matSort>
+    <table mat-table class="mat-elevation-z8" multiTemplateDataRows (matSortChange)="sortData($event)"
+           [dataSource]="accountsShow" matSort>
 
       <ng-container matColumnDef="customer_name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên khách hàng</th>
         <td mat-cell
-            *matCellDef="let account"> {{ account.customer_name}} </td>
+            *matCellDef="let account"><a [routerLink]="['../../clients',account.client_id,'general']"
+                                         [queryParams]="{ typeViewClient: 'view'}"> {{ account.customer_name}}</a></td>
       </ng-container>
 
       <ng-container matColumnDef="staff_name">
@@ -53,26 +55,26 @@
       </ng-container>
 
 
-            <ng-container matColumnDef="expandedDetail">
-              <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                <div class="example-element-detail"
-                     [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                  <div class="example-element-description" fxLayout="column">
-                    <div>
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell fxShow fxHide.gt-md *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail"
+               [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-description" fxLayout="column">
+              <div>
                       <span style="font-weight: bold;">
                         Nhân viên phụ trách :</span>&nbsp;
-                      &nbsp;{{ element.staff_name }}
-                    </div>
-                    <div>
+                &nbsp;{{ element.staff_name }}
+              </div>
+              <div>
                       <span style="font-weight: bold;">
                         Số tài khoản :</span>&nbsp;
-                      &nbsp;{{ element.account_no }}
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </ng-container>
-      <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
+                &nbsp;{{ element.account_no }}
+              </div>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let element; columns: displayedColumns;"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement === element"
@@ -142,7 +144,7 @@
           </div>
         </td>
       </ng-container>
-      <tr mat-header-row  *matHeaderRowDef="displayedColumns2"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
       <tr mat-row *matRowDef="let element; columns: displayedColumns2;"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement2 === element"
