--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
@@ -86,3 +86,20 @@ tr.example-element-row:not(.example-expanded-row):active {
 .no-input {
   max-width: 70px;
 }
+
+.example-container {
+  position: relative;
+  min-height: 200px;
+}
+
+.example-table-container {
+  position: relative;
+  max-height: 400px;
+  overflow: auto;
+}
+
+table {
+  width: 100%;
+}
+
+
