--- a/src/app/transactions/dialog/create-card-batch-transaction/create-card-batch-transaction.component.scss
+++ b/src/app/transactions/dialog/create-card-batch-transaction/create-card-batch-transaction.component.scss
@@ -86,3 +86,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .no-input {
   max-width: 70px;
 }
+
+.create {
+  background-color: #00ce00;
+}
