--- a/src/app/transactions/manage-transaction/manage-transaction.component.scss
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.scss
@@ -65,3 +65,10 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+
+.productId {
+  background-color: #1fb050;
+  border-radius: 10px;
+  padding: 8px;
+  color: white;
+}
