--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.scss
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.scss
@@ -74,12 +74,11 @@ tr.example-detail-row {
   height: 0;
 }
 
-tr.example-element-row:not(.example-expanded-row):hover {
-  background: whitesmoke;
+.mat-row:nth-child(4n + 1) {
+  background: #cef0f5 !important;
 }
-
-tr.example-element-row:not(.example-expanded-row):active {
-  background: #efefef;
+.mat-row:not(:nth-child(2n + 1)) {
+  background-color:#fff !important;
 }
 
 .example-element-row td {
