--- a/src/app/booking-manage/agency-booking/agency-booking.component.scss
+++ b/src/app/booking-manage/agency-booking/agency-booking.component.scss
@@ -9,6 +9,12 @@
   text-decoration: line-through;
 }
 
+.mat-row:nth-child(4n + 1) {
+  background: #cef0f5 !important;
+}
+.mat-row:not(:nth-child(2n + 1)) {
+  background-color:#fff !important;
+}
 mat-icon{
   cursor: pointer;
 }
