--- a/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.scss
+++ b/src/app/transactions/rollTerm-schedule-transaction/roll-term-schedule-tab/roll-term-schedule-tab.component.scss
@@ -64,10 +64,7 @@ tr.example-detail-row {
 
 td.mat-cell {
   /* row padding */
-  padding: 16px 0;
-  /* row border */
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  padding: 16px 5px;
  }
 
  table {
