--- a/src/app/transactions/rollTerm-schedule-transaction/on-roll-term-card-tab/on-roll-term-card-tab.component.scss
+++ b/src/app/transactions/rollTerm-schedule-transaction/on-roll-term-card-tab/on-roll-term-card-tab.component.scss
@@ -15,10 +15,8 @@
 }
 td.mat-cell {
   /* row padding */
-  padding: 16px 0;
-  /* row border */
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  padding: 16px 5px;
+
  }
 
  table {
@@ -98,7 +96,6 @@ tr.example-detail-row {
 
 .example-element-diagram {
   min-width: 80px;
-  border: 2px solid black;
   padding: 8px;
   font-weight: lighter;
   margin: 8px 0;
