remove redirect agency
remove redirect agency

--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -67,7 +67,7 @@
             {{ transaction.clientName }}<br />
           </a>
           <mat-label style="font-size: small" *ngIf="transaction.groupName">
-            <a href="#/groups/{{ transaction.groupId }}/general">
+            <a href="javascript:void(0)">
               <mat-icon style="color: black; " title="Thuộc đại lý">groups</mat-icon>
               {{ transaction.groupName }}
             </a>
