fix agnecybooking forward to batchtranaction
fix agnecybooking forward to batchtranaction, disable on last booking rollterm row

--- a/src/app/booking-manage/agency-booking/agency-booking.component.html
+++ b/src/app/booking-manage/agency-booking/agency-booking.component.html
@@ -175,7 +175,11 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Hành động</th>
         <td mat-cell *matCellDef="let booking">
-          <a href="#/transaction/batch-transaction/{{booking.agencyId}}">
+          <a
+          href="#"
+          (click)="document.location.href=this.getUrlReturnBatchTransaction(booking.agencyId, booking.batchTxnName);"
+
+          >
           <button mat-mini-fab color="primary">
             <mat-icon title="Thực hiện giao dịch "> gavel </mat-icon>
           </button>
