--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/create-roll-term-schedule/create-roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/create-roll-term-schedule/create-roll-term-schedule-dialog.component.html
@@ -62,10 +62,11 @@
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>
             Số tiền - Tổng: {{ totalBookingAmount | money }}
           </th>
-          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking">
+          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking ; let i = dataIndex">
             <mat-form-field>
               <input
                 matInput
+                [disabled]="i == (this.dataSource.data.length - 1)"
                 type="text"
                 currencyMask
                 [(ngModel)]="booking.amountBooking"
