change package /ng-pick-datetime

--- a/src/main.scss
+++ b/src/main.scss
@@ -21,3 +21,4 @@ $fa-font-path:"theme/fontawesome/webfonts";
 @import "theme/fontawesome/scss/brands.scss";
 @import "theme/fontawesome/scss/solid.scss";
 // @import "~ngx-easy-table/style.scss";
+@import "~@busacca/ng-pick-datetime/assets/style/picker.min.css";
