--- a/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
+++ b/src/app/marketing/create-booking-marketing/create-booking-marketing.component.html
@@ -65,11 +65,13 @@
         <table mat-table [dataSource]="cards" matSort
                multiTemplateDataRows>
           <!-- Name Column -->
-          <ng-container matColumnDef="cardType">
+          <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef
             >Thẻ
             </th>
-            <td mat-cell *matCellDef="let row"> {{row.cardType}} </td>
+            <td mat-cell *matCellDef="let row" [formGroup]="row">
+              {{row.get('description').value}}
+            </td>
           </ng-container>
 
           <!-- Account no Column -->
@@ -77,7 +79,9 @@
             <th mat-header-cell *matHeaderCellDef
             > Phí POS
             </th>
-            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.costRate}} </td>
+            <td mat-cell *matCellDef="let row" [formGroup]="row">
+              <input matInput class="input-card" formControlName="costRate">
+            </td>
           </ng-container>
 
           <!-- External ID Column -->
@@ -85,13 +89,17 @@
             <th mat-header-cell d *matHeaderCellDef
             > Phí Vốn
             </th>
-            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.cogsRate}} </td>
+            <td mat-cell *matCellDef="let row" [formGroup]="row">
+              <input matInput class="input-card"  formControlName="cogsRate">
+            </td>
           </ng-container>
-          <ng-container matColumnDef="minRate">
+          <ng-container matColumnDef="rate">
             <th mat-header-cell *matHeaderCellDef
             >Phí GD
             </th>
-            <td mat-cell fxHide fxShow.gt-md *matCellDef="let row"> {{row.minRate}} </td>
+            <td mat-cell *matCellDef="let row" [formGroup]="row">
+              <input matInput class="input-card"  formControlName="rate">
+            </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedCardColumns"></tr>
           <tr mat-row *matRowDef="let element; columns: displayedCardColumns;"
@@ -119,9 +127,12 @@
                 cdkDropListSortingDisabled
                 (cdkDropListDropped)="drop($event)">
                 <div
+                  style="padding: 10px; margin: 4px; border-color: #666f73;
+                     border-width: 1px;
+                      border-radius: 10px;"
                   (click)="setOfficeSelect(item,'left')"
                   [class.selected_box]="item===office_selected_left"
-                  class="example-box" *ngFor="let item of offices" cdkDrag>{{item}}</div>
+                  class="example-box" *ngFor="let item of offices" cdkDrag>{{item.name}}</div>
               </div>
             </div>
             <div fxFlex="5%" style="display: flex;">
@@ -158,9 +169,10 @@
                 class="example-list"
                 (cdkDropListDropped)="drop($event)">
                 <div class="example-box"
+                     style="padding: 10px; margin: 4px; border-color: #666f73; border-width: 1px; border-radius: 10px;"
                      (click)="setOfficeSelect(item,'right')"
-                      [class.selected_box]="item===office_selected_right"
-                     *ngFor="let item of officeIds" cdkDrag>{{item}}</div>
+                     [class.selected_box]="item===office_selected_right"
+                     *ngFor="let item of officeIds" cdkDrag>{{item.name}}</div>
               </div>
             </div>
           </div>
@@ -176,21 +188,35 @@
                 <input matInput placeholder="Search">
               </div>
               <div
-                cdkDropList
-                [cdkDropListData]="offices"
-                class="example-list"
-                cdkDropListSortingDisabled
-                (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of offices" cdkDrag>{{item}}</div>
+                style=" height: 60vh;
+                          overflow: auto;">
+                <div class="example-box" *ngFor="let item of poses"
+                     [class.selected_box]="pos_selected_left===item"
+                     (click)="setPosSelect(item,'left')"
+                     style="padding: 10px; margin: 4px; border-color: #666f73; border-width: 1px; border-radius: 10px;"
+                     cdkDrag>{{item.terminalName}}</div>
               </div>
             </div>
             <div fxFlex="5%" style="display: flex;">
               <div fxLayout="column" style="display: flex; margin-top: auto; margin-bottom: auto;">
-                <button style="margin: 3px;" mat-raised-button> ></button>
-                <button style="margin: 3px;" mat-raised-button> >></button>
+                <button
+                  (click)="changePoses('b','left')"
+                  style="margin: 3px;" mat-raised-button> >
+                </button>
+                <button
+                  (click)="changePoses('all','left')"
+                  style="margin: 3px;" mat-raised-button> >>
+                </button>
                 <hr/>
-                <button style="margin: 3px;" mat-raised-button> <</button>
-                <button style="margin: 3px;" mat-raised-button> <<</button>
+                <button
+                  (click)="changePoses('b','right')"
+                  style="margin: 3px;" mat-raised-button> <
+                </button>
+                <button
+                  (click)="changePoses('all','right')"
+                  style="margin: 3px;" mat-raised-button> <<
+                </button>
+
               </div>
             </div>
             <div fxFlex="44%" class="example-container">
@@ -200,11 +226,13 @@
                 <input matInput placeholder="Search">
               </div>
               <div
-                cdkDropList
-                [cdkDropListData]="officeIds"
-                class="example-list"
-                (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of officeIds" cdkDrag>{{item}}</div>
+                style="   height: 60vh;
+                          overflow: auto;">
+                <div class="example-box"
+                     [class.selected_box]="pos_selected_right===item"
+                     (click)="setPosSelect(item,'right')"
+                     style="padding: 10px; margin: 4px; border-color: #666f73; border-width: 1px; border-radius: 10px;"
+                     *ngFor="let item of terminalId" cdkDrag>{{item.terminalName}}</div>
               </div>
             </div>
           </div>
@@ -216,7 +244,9 @@
     <button mat-raised-button>
       Hủy
     </button>
-    <button mat-raised-button color="primary">
+    <button mat-raised-button
+            (click)="onSubmit()"
+            color="primary">
       Tạo chiến dịch
     </button>
   </mat-card-actions>
